--- a/personalwebsitelabstyles.css
+++ b/personalwebsitelabstyles.css
@@ -1,7 +1,15 @@
-body {
+html {
     background-color: black;
     color: white;
+    text-align: center;
 }
+
+@media only screen and (min-width: 768px) {
+    body {
+      text-align: left;
+    }
+  }
+
 
 h1 {
     text-align:center;
