--- a/personalwebsitelabstyles.css
+++ b/personalwebsitelabstyles.css
@@ -2,6 +2,8 @@ html {
     background-color: black;
     color: white;
     text-align: center;
+    font-family: Arial;
+
 }
 
 @media only screen and (min-width: 768px) {
